...
                        <connections>
                            <outlet property="dataSource" destination="46Y-WF-8wJ" id="a7o-sy-QMT"/>
                            <outlet property="delegate" destination="46Y-WF-8wJ" id="Wsa-AQ-ffm"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Cast &amp; Crew" id="vA5-Ec-tYe">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="chevron.down" catalog="system" id="OQD-2H-Bkq">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <segue destination="W7P-lc-7ej" kind="unwind" unwindAction="unwind:" id="mnE-s8-uwL"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="8ym-zq-juS" id="pOE-q4-uIg"/>
                            <outlet property="delegate" destination="8ym-zq-juS" id="sjh-il-who"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Photos" id="HzJ-d5-YTc">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="chevron.down" catalog="system" id="sF8-Lr-1nG">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <segue destination="TIT-n1-w2R" kind="unwind" unwindAction="unwind:" id="7he-od-Ljc"/>
                            </connections>
                        </barButtonItem>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wZs-8I-QH0">
                                                <rect key="frame" x="225.5" y="550" width="77.5" height="34"/>
                                                <color key="tintColor" red="0.12549019610000001" green="0.74509803919999995" blue="0.77647058820000003" alpha="1" colorSpace="calibratedRGB"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="View All">
                                                    <fontDescription key="titleFontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                                </buttonConfiguration>
                                                <connections>
                                                    <segue destination="oER-ef-kh5" kind="presentation" identifier="CastSegue" id="0vE-nL-oTc"/>
                                                </connections>
                                            </button>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D1K-yF-BZX">
                                                <rect key="frame" x="202.5" y="489" width="100.5" height="34"/>
                                                <color key="tintColor" red="0.12549019607843137" green="0.74509803921568629" blue="0.77647058823529413" alpha="1" colorSpace="calibratedRGB"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="Show More">
                                                    <fontDescription key="titleFontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                                </buttonConfiguration>
                                                <connections>
                                                    <action selector="showMoreButtonClicked:" destination="UaJ-3L-RZ9" eventType="touchUpInside" id="dLC-Ji-NJP"/>
                                                </connections>
                                            </button>
...
                        <subviews>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="rZC-hc-kRS">
                                <rect key="frame" x="16" y="52" width="288" height="32"/>
                                <color key="backgroundColor" name="SegmentedControl"/>
                                <segments>
                                    <segment title="Now Playing"/>
                                    <segment title="Coming Soon"/>
                                </segments>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <color key="selectedSegmentTintColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <connections>
                                    <action selector="active:" destination="oN7-eK-Mv6" eventType="valueChanged" id="dnx-Mt-Qrl"/>
                                </connections>
...
